--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "es6-promise": "^4.2.8",
     "history": "^4.10.1",
     "lodash": "^4.17.15",
+    "node-sass": "^4.13.0",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
