--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "react-test-renderer": "^16.12.0",
     "redux-devtools-extension": "^2.13.8"
   }
